--- a/index.html
+++ b/index.html
@@ -3,10 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles.css">
   <title>Square Adventure</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <section id="home-screen">
+    <div class="home-title">
+      <h1>Square</h1>
+      <h2>Adventure</h2>
+    </div>
+    <div class="home-options">
+      <button class="start-button">Start</button>
+      <button class="settings-button">Settings</button>
+    </div>
+  </section>
+
+  <section id="modal-settings-screen">
+    <div class="settings-content">
+      <span class="close-button-modal">&times;</span>
+      <div class="settings-options">
+        <div>
+          <span>Choose a color for your square: </span>
+          <input class="color-input" name="Color Picker" type="color" value="#FFD700"/>
+        </div>
+        <div>
+          <span>Adjuste sound: </span>
+          <div class="sound-view">
+            <input type="range" min="1" max="100" value="50" class="sound-slider" >
+            <p class="sound-slider-value"></p>
+          </div>
+        </div>
+        <div>
+          <span>Choose game difficulty: </span>
+          <div class="difficult-view">
+            <input type="range" min="50" max="100" value="50" class="difficult-slider" >
+            <p class="difficult-slider-value"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section id="modal-end-screen">
+    <div class="end-content">
+      <h1>Game Over</h1>
+      <div class="end-options">
+        <button class="go-home-button">Home</button>
+        <button class="restart-button">Restart</button>
+      </div>
+    </div>
+  </section>
+
   <script type="module" src="./main.js"></script>
 </body>
 </html>
